# carpeta-api-interna/openapi/openapi_mobilenotification_v1.json
@@ -87,19 +87,31 @@
           "401" : {
             "description" : "No Autenticat",
             "content" : {
-              "application/json" : { }
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
             }
           },
           "403" : {
             "description" : "No Autoritzat",
             "content" : {
-              "application/json" : { }
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
             }
           },
           "404" : {
             "description" : "Paràmetres incorrectes",
             "content" : {
-              "application/json" : { }
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
             }
           },
           "500" : {
@@ -155,11 +167,11 @@
             }
           },
           "400" : {
-            "description" : "Error",
+            "description" : "Errors en els Paràmetres",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
                 }
               }
             }
@@ -167,19 +179,31 @@
           "401" : {
             "description" : "No Autenticat",
             "content" : {
-              "application/json" : { }
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
             }
           },
           "403" : {
             "description" : "No Autoritzat",
             "content" : {
-              "application/json" : { }
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
             }
           },
           "404" : {
             "description" : "Paràmetres incorrectes",
             "content" : {
-              "application/json" : { }
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
             }
           },
           "500" : {
@@ -314,12 +338,12 @@
   "components" : {
     "schemas" : {
       "RestExceptionInfo" : {
-        "required" : [ "code", "errorMessage" ],
+        "required" : [ "errorMessage" ],
         "type" : "object",
         "properties" : {
-          "code" : {
+          "errorCode" : {
             "type" : "integer",
-            "description" : "Codi de HTTP de l'error. Veure https://en.wikipedia.org/wiki/List_of_HTTP_status_codes.",
+            "description" : "Codi intern de l'error. Si l'Aplicació no gestiona codis d'error llavors val null.",
             "format" : "int32"
           },
           "errorMessage" : {
@@ -328,15 +352,15 @@
           },
           "stackTrace" : {
             "type" : "string",
-            "description" : "Stacktrace de l'excepció si n'hi hagués."
+            "description" : "Stacktrace de l'excepció"
           },
-          "causeException" : {
+          "stackTraceCause" : {
             "type" : "string",
-            "description" : "Tipus de l'excepció origen (cause) si n'hi hagués."
+            "description" : "Stacktrace de l'excepció causant de l'error si n'hi hagués."
           },
-          "causeStackTrace" : {
+          "field" : {
             "type" : "string",
-            "description" : "Stacktrace de l'excepció origen (cause) si n'hi hagués."
+            "description" : "Indica el camp en que hi ha un error de validació."
           }
         },
         "description" : "Estructura de dades utilitzada per passar informació d'un error"
